RESOLVED FIXED230399
imported/w3c/web-platform-tests/webrtc/RTCDataChannel-close.html is flaky
https://bugs.webkit.org/show_bug.cgi?id=230399
Summary imported/w3c/web-platform-tests/webrtc/RTCDataChannel-close.html is flaky
youenn fablet
Reported 2021-09-17 05:06:03 PDT
imported/w3c/web-platform-tests/webrtc/RTCDataChannel-close.html is flaky
Attachments
Patch (18.37 KB, patch)
2021-09-17 06:23 PDT, youenn fablet
no flags
Patch (18.55 KB, patch)
2021-09-17 07:06 PDT, youenn fablet
no flags
Patch (22.48 KB, patch)
2021-09-20 05:10 PDT, youenn fablet
no flags
Patch (22.47 KB, patch)
2021-09-21 08:47 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2021-09-17 06:23:45 PDT
youenn fablet
Comment 2 2021-09-17 07:06:40 PDT
youenn fablet
Comment 3 2021-09-20 05:10:45 PDT
EWS Watchlist
Comment 4 2021-09-20 05:11:41 PDT
This patch modifies the imported WPT tests. Please ensure that any changes on the tests (not coming from a WPT import) are exported to WPT. Please see https://trac.webkit.org/wiki/WPTExportProcess
youenn fablet
Comment 5 2021-09-20 07:29:27 PDT
I move the resyncing of imported/w3c/web-platform-tests/webrtc/RTCDataChannel-close.html from https://bugs.webkit.org/show_bug.cgi?id=229549 to this patch so that we keep it not flaky.
Eric Carlson
Comment 6 2021-09-21 07:57:59 PDT
Comment on attachment 438659 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=438659&action=review > Source/WebCore/ChangeLog:11 > + - We were creating the data channel handler at the time we were creating the data channel handler. S/creating the data channel handler at the time/creating the data channel at the time/ > Source/WebCore/ChangeLog:18 > + Covered by test no longer flaky. and by updated test RTCDataChannel-close.html.
youenn fablet
Comment 7 2021-09-21 08:47:37 PDT
EWS
Comment 8 2021-09-21 10:06:06 PDT
Committed r282825 (241956@main): <https://commits.webkit.org/241956@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 438827 [details].
Radar WebKit Bug Importer
Comment 9 2021-09-21 10:07:36 PDT
Note You need to log in before you can comment on or make changes to this bug.